# ObsidianLite

./: .dockerignore  .env-example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.serverless  README.md  Shuttle.toml  docker-compose-prod.yaml  docker-compose.yaml
.github/workflows/: docker-publish.yml  rust.yml
.sqlx/: query-292555e8e7db64230e99e2c58300caa22d96913dc41a78d151727d1f80c790b6.json  query-4a9495b4333384f59fc037209b0673790f2202302c842a6f88fec2fb4b5aec22.json  query-59c41b59bcf33bbc3cb2c15713db81b568fb7b13b59b81acf51d84452292c172.json  query-6b3de6bc742a9d37ea491f1567ac90dd9e837ebdb5c03ec42931570c132ce4fa.json  query-7e3e21191e210ab72dd516d8fbf56c8e8f76634746b4e2f671169626ccee68d7.json  query-8ace61c5be3aa3433472921e5e79fac39abcad2a4eebb31cfb6e709689bcf71d.json  query-b8db72c0540a6d17cc2af8ef25cbaf089d179821b2d72127884fa56e90eefe32.json
iac/pulumi/: Pulumi.dev.yaml
iac/serverless/: Pulumi.yaml  __main__.py
iac/vm/ansible/playbooks/: bot.yml
iac/vm/pulumi/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
migrations/: 20240520162407_initial_migration.sql  20240521143618_initial_migration.down.sql  20240521143618_initial_migration.up.sql
src/: error_handler.rs  event_handler.rs  lib.rs  main.rs
src/extensions/: mod.rs
src/extensions/fun/: mod.rs  weather.rs
src/extensions/fun/gpt/: mod.rs  provider.rs  ws_helper.rs
src/extensions/moderator/: mute.rs
src/extensions/utils/: event.rs  help.rs
