[package]
name = "obsidian_lite"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
shuttle-runtime = "0.12.0"
shuttle-poise = "0.12.0"
shuttle-secrets = "0.12.0"
anyhow = "1.0.68"
poise = "0.5.2"
tracing = "0.1.37"
reqwest = { version = "0.11.14", features = ["json", "serde_json"] }
serde = "1.0.152"
serde_json = "1.0.91"
serde_derive = "1.0.152"
chrono = "0.4.23"
tokio = { version = "1.26.0", features = ["time"] }
