[package]
name = "obsidian_lite"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# shuttle-runtime = "0.43.0"
# shuttle-poise = "0.37.0"
# shuttle-secrets = "0.42.0"
anyhow = "1.0.71"
poise = "0.6.1"
tracing = "0.1.37"
reqwest = { version = "0.12.3", features = ["json"] }
serde = "1.0.152"
serde_json = "1.0.91"
serde_derive = "1.0.152"
chrono = "0.4.23"
tokio = { version = "1.26.0", features = ["time", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.21.0", default_features = false, features = [
    "native-tls",
] }
tokio-native-tls = "0.3.1"
url = "2.4.1"
dotenvy = "0.15.7"
